// =====================================================================
// Subject R — 베리어프리 이동 보조 안내 로봇 / 1차 스키마
// dbdiagram.io 에 그대로 붙여넣으면 된다
//
// 실제 PostgreSQL 16 + PostGIS 3 스키마에서 자동 생성했다
// 좌표계: SLAM 지도 원점 기준 미터 단위 로컬 좌표 (SRID 0, 위경도 아님)
// 시각  : 전부 timestamptz, UTC 저장
// =====================================================================

// ---------- ENUM ----------
Enum poi_category {
  entrance
  lobby
  restroom
  elevator
  stairs
  therapy_room
  program_room
  office
  cafeteria
  charging_station
  waiting_area
  other
}

Enum robot_status {
  offline
  idle
  driving
  charging
  error
  estop
}

Enum trip_event_type {
  obstacle_detected
  obstacle_cleared
  replan
  estop_pressed
  estop_released
  manual_override
  paused
  resumed
  waypoint_reached
  arrived
  low_battery
  localization_lost
  error
}

Enum trip_mode {
  guide
  follow
  manual
  return_to_charge
}

Enum trip_requester {
  kiosk
  dashboard
  robot_auto
}

Enum trip_status {
  requested
  navigating
  paused
  arrived
  completed
  canceled
  failed
}

Enum user_role {
  admin
  staff
  viewer
}

Enum zone_type {
  keepout
  slow
  caution
  service_area
}

// ---------- 테이블 ----------
Table facility {
  id bigint [pk, increment]
  code text [unique, not null]
  name text [not null]
  address text
  floor_count smallint
  contact_name text
  contact_phone text
  note text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: '''
    복지관 등 운영 기관
  '''
}

Table map {
  id bigint [pk, increment]
  facility_id bigint [not null]
  floor smallint [not null]
  version int [not null, default: `1`]
  name text
  pgm_uri text [not null]
  yaml_uri text [not null]
  resolution_m float [not null]
  origin_x float [not null]
  origin_y float [not null]
  origin_yaw float [not null, default: `0`]
  width_px int
  height_px int
  slam_method text [not null]
  is_active boolean [not null, default: `false`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (facility_id, floor, version) [unique, name: 'uq_map_version']
  }

  Note: '''
    SLAM 지도의 한 버전. 다시 돌리면 새 레코드다.
    좌표계가 통째로 바뀌므로 절대 덮어쓰지 않는다.

    [부분 유니크] 한 층에 활성 지도는 하나만
      facility_id, floor WHERE is_active
  '''
}

Table poi {
  id bigint [pk, increment]
  map_id bigint [not null]
  code text [not null]
  name_ko text [not null]
  name_short text
  category poi_category [not null]
  geom geometry [not null]
  approach_yaw float
  voice_script text
  voice_file_uri text
  wheelchair_accessible boolean [not null, default: `true`]
  is_selectable boolean [not null, default: `true`]
  display_order smallint [not null, default: `0`]
  is_active boolean [not null, default: `true`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (map_id, code) [unique, name: 'uq_poi_code']
  }

  Note: '''
    목적지. 사용자가 화면에서 고르는 것.
    is_selectable=false면 좌표는 있지만 목록에 안 뜬다 (충전 스테이션 등).
  '''
}

Table zone {
  id bigint [pk, increment]
  map_id bigint [not null]
  name text [not null]
  zone_type zone_type [not null]
  geom geometry [not null]
  speed_limit_mps float
  priority smallint [not null, default: `0`]
  is_active boolean [not null, default: `true`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    진입금지·서행 구역.
    zone_type=slow면 speed_limit_mps가 반드시 있어야 한다 (CHECK 제약).
  '''
}

Table route_edge {
  id bigint [pk, increment]
  map_id bigint [not null]
  from_poi_id bigint [not null]
  to_poi_id bigint [not null]
  distance_m float [not null]
  is_bidirectional boolean [not null, default: `true`]
  slope_pct float [not null, default: `0`]
  has_step boolean [not null, default: `false`]
  min_width_m float
  is_active boolean [not null, default: `true`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (from_poi_id, to_poi_id) [unique, name: 'uq_route_edge']
  }

  Note: '''
    POI 간 연결 그래프.
    min_width_m / has_step / slope_pct 가 베리어프리 판정의 핵심이다.

    [CHECK] from_poi_id <> to_poi_id, distance_m >= 0
  '''
}

Table robot {
  id bigint [pk, increment]
  uuid uuid [unique, not null, default: `gen_random_uuid()`]
  serial text [unique, not null]
  name text [not null]
  model text
  current_map_id bigint
  status robot_status [not null]
  battery_pct smallint
  last_seen_at timestamptz
  firmware_version text
  note text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: '''
    로봇 대수 관리. 물리 삭제 금지 — deleted_at 사용.

    [CHECK] battery_pct BETWEEN 0 AND 100
  '''
}

Table app_user {
  id bigint [pk, increment]
  email citext [unique, not null]
  hashed_password text [not null]
  display_name text [not null]
  role user_role [not null]
  facility_id bigint
  is_active boolean [not null, default: `true`]
  last_login_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    관리자·직원 계정만.
    노인 이용자는 계정이 없다 (로봇 화면은 키오스크 방식).
  '''
}

Table trip {
  id bigint [pk, increment]
  uuid uuid [unique, not null, default: `gen_random_uuid()`]
  robot_id bigint [not null]
  map_id bigint [not null]
  mode trip_mode [not null]
  status trip_status [not null]
  origin_poi_id bigint
  dest_poi_id bigint
  requested_by trip_requester [not null]
  requested_by_user_id bigint
  is_simulated boolean [not null, default: `false`]
  requested_at timestamptz [not null, default: `now()`]
  started_at timestamptz
  ended_at timestamptz
  planned_distance_m float
  actual_distance_m float
  abort_reason text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    안내 요청 1건. "mission", "task"라고 부르지 않는다.
    is_simulated로 시뮬레이션 결과와 실주행을 구분한다.

    [부분 유니크] 한 로봇에 진행중 trip은 하나만
      robot_id WHERE status IN (requested, navigating, paused)
  '''
}

Table trip_event {
  id bigint [pk, increment]
  trip_id bigint [not null]
  ts timestamptz [not null]
  event_type trip_event_type [not null]
  severity smallint [not null, default: `0`]
  geom geometry
  payload jsonb [not null, default: `{}`]
  created_at timestamptz [not null, default: `now()`]

  Note: '''
    trip 중 일어난 사건.
    geom이 있어서 "어느 지점에서 자꾸 막히나"를 지도에 찍을 수 있다.

    [CHECK] severity BETWEEN 0 AND 2
  '''
}

// ---------- 관계 (ON DELETE 규칙 포함) ----------
Ref: app_user.facility_id > facility.id [delete: set null]
Ref: map.facility_id > facility.id [delete: restrict]
Ref: poi.map_id > map.id [delete: cascade]
Ref: robot.current_map_id > map.id [delete: set null]
Ref: route_edge.from_poi_id > poi.id [delete: cascade]
Ref: route_edge.map_id > map.id [delete: cascade]
Ref: route_edge.to_poi_id > poi.id [delete: cascade]
Ref: trip.dest_poi_id > poi.id [delete: set null]
Ref: trip.map_id > map.id [delete: restrict]
Ref: trip.origin_poi_id > poi.id [delete: set null]
Ref: trip.requested_by_user_id > app_user.id [delete: set null]
Ref: trip.robot_id > robot.id [delete: restrict]
Ref: trip_event.trip_id > trip.id [delete: cascade]
Ref: zone.map_id > map.id [delete: cascade]

// ---------- 그룹 ----------
TableGroup "공간 / 마스터" {
  facility
  map
  poi
  zone
  route_edge
}

TableGroup "로봇 / 운행" {
  robot
  trip
  trip_event
}

TableGroup "계정" {
  app_user
}
